--- a/app/src/main/res/layout/fragment_discver_service.xml
+++ b/app/src/main/res/layout/fragment_discver_service.xml
@@ -121,72 +121,81 @@
                 android:textColor="@color/text6"/>
         </LinearLayout>
     </LinearLayout>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/dp_40"
-            android:layout_marginTop="@dimen/dp_10"
-            android:background="@android:color/white"
-            android:gravity="center">
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center">
-                <ImageView
-                    android:layout_width="@dimen/dp_18"
-                    android:layout_height="@dimen/dp_17"
-                    android:layout_centerVertical="true"
-                    android:src="@drawable/discover_programmer"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/dp_5"
-                    android:textSize="@dimen/sp_16"
-                    android:textColor="#333333"
-                    android:text="农作物系统解决方案"
-                    android:layout_centerVertical="true"/>
-                <LinearLayout
-                    android:id="@+id/fg_discover_ll"
-                    android:visibility="gone"
-                    android:layout_width="@dimen/dp_140"
-                    android:layout_height="@dimen/dp_30"
-                    android:layout_marginLeft="@dimen/dp_20"
-                    android:layout_marginRight="@dimen/dp_30"
-                    android:background="@color/background">
-                    <EditText
-                        android:id="@+id/fg_discover_et_search"
-                        android:layout_width="@dimen/dp_120"
-                        android:layout_height="@dimen/dp_26"
-                        android:backgroundTint="@color/line"
-                        android:layout_marginLeft="@dimen/dp_10"
-                        android:layout_marginTop="@dimen/dp_2"
-                        android:lines="1"
-                        android:hint="请输入农作物"
-                        android:textSize="@dimen/sp_14"
-                        android:imeOptions="actionSearch"
-                        android:singleLine="true"
-                        android:background="@null"/>
-                </LinearLayout>
-            </LinearLayout>
-            <ImageView
-                android:id="@+id/fg_discoverService_iv_search"
-                android:layout_width="@dimen/dp_26"
-                android:layout_height="@dimen/dp_22"
-                android:layout_alignParentRight="true"
-                android:layout_marginRight="@dimen/dp_12"
-                android:src="@drawable/discover_service_search"
-                android:layout_centerVertical="true"/>
-        </RelativeLayout>
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/fg_discover_service_rv"
+    <com.scwang.smartrefresh.layout.SmartRefreshLayout
+        android:id="@+id/refreshLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@android:color/white"
-            android:paddingTop="@dimen/dp_10"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="@dimen/dp_120"
-            android:text="搜索结果不存在，换个关键词试试？"/>
+            android:orientation="vertical">
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dp_40"
+                android:layout_marginTop="@dimen/dp_10"
+                android:background="@android:color/white"
+                android:gravity="center">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center">
+                    <ImageView
+                        android:layout_width="@dimen/dp_18"
+                        android:layout_height="@dimen/dp_17"
+                        android:layout_centerVertical="true"
+                        android:src="@drawable/discover_programmer"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="@dimen/dp_5"
+                        android:textSize="@dimen/sp_16"
+                        android:textColor="#333333"
+                        android:text="农作物系统解决方案"
+                        android:layout_centerVertical="true"/>
+                    <LinearLayout
+                        android:id="@+id/fg_discover_ll"
+                        android:visibility="gone"
+                        android:layout_width="@dimen/dp_140"
+                        android:layout_height="@dimen/dp_30"
+                        android:layout_marginLeft="@dimen/dp_20"
+                        android:layout_marginRight="@dimen/dp_30"
+                        android:background="@color/background">
+                        <EditText
+                            android:id="@+id/fg_discover_et_search"
+                            android:layout_width="@dimen/dp_120"
+                            android:layout_height="@dimen/dp_26"
+                            android:backgroundTint="@color/line"
+                            android:layout_marginLeft="@dimen/dp_10"
+                            android:layout_marginTop="@dimen/dp_2"
+                            android:lines="1"
+                            android:hint="请输入农作物"
+                            android:textSize="@dimen/sp_14"
+                            android:imeOptions="actionSearch"
+                            android:singleLine="true"
+                            android:background="@null"/>
+                    </LinearLayout>
+                </LinearLayout>
+                <ImageView
+                    android:id="@+id/fg_discoverService_iv_search"
+                    android:layout_width="@dimen/dp_26"
+                    android:layout_height="@dimen/dp_22"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginRight="@dimen/dp_12"
+                    android:src="@drawable/discover_service_search"
+                    android:layout_centerVertical="true"/>
+            </RelativeLayout>
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/fg_discover_service_rv"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@android:color/white"
+                android:paddingTop="@dimen/dp_10"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="@dimen/dp_120"
+                android:text="搜索结果不存在，换个关键词试试？"/>
+        </LinearLayout>
+    </com.scwang.smartrefresh.layout.SmartRefreshLayout>
 </LinearLayout>
