--- a/app/src/main/res/layout/activity_add_address.xml
+++ b/app/src/main/res/layout/activity_add_address.xml
@@ -31,7 +31,7 @@
             android:orientation="horizontal">
             <EditText
                 android:id="@+id/ac_address_et_consignee"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:hint="请输入收件人姓名"
                 android:textColor="@color/text9"
@@ -50,10 +50,11 @@
             android:orientation="horizontal">
             <EditText
                 android:id="@+id/ac_address_et_mobile"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:hint="请输入手机号"
                 android:textColor="@color/text9"
+                android:inputType="phone"
                 android:textSize="@dimen/sp_13"
                 android:background="@null"/>
         </LinearLayout>
@@ -69,10 +70,11 @@
             android:orientation="horizontal">
             <TextView
                 android:id="@+id/ac_address_tv_address"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:layout_gravity="center_vertical"
                 android:hint="省 市 区"
+                android:gravity="center_vertical"
                 android:textColor="@color/text9"
                 android:textSize="@dimen/sp_13"
                 android:background="@null"/>
@@ -88,7 +90,7 @@
             android:orientation="horizontal">
             <EditText
                 android:id="@+id/ac_address_et_houseNumber"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:hint="请填写详细地址"
                 android:textColor="@color/text9"
