--- a/app/src/main/res/layout/activity_haibao.xml
+++ b/app/src/main/res/layout/activity_haibao.xml
@@ -6,11 +6,11 @@
         android:id="@+id/title"/>
     <LinearLayout
         android:id="@+id/ac_haibao_ll"
-        android:layout_below="@id/title"
         android:layout_width="@dimen/dp_320"
         android:layout_height="@dimen/dp_500"
         android:background="@drawable/hb"
-        android:layout_centerInParent="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="@dimen/dp_130"
         android:orientation="vertical">
         <RelativeLayout
             android:layout_width="match_parent"
@@ -83,13 +83,6 @@
                 android:text="立即扫码进入礼包店成为农品街代言人，我在农品街庄园等你，让我们重温农场的乐趣吧！"/>
         </RelativeLayout>
     </LinearLayout>
-    <ImageView
-        android:id="@+id/show"
-        android:visibility="gone"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="@dimen/dp_80"
-        android:layout_centerInParent="true"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_40"
